# agileagents

./: .env.example  .env.sample  README.md  main.py  pyproject.toml  requirements.txt  test.py
.devcontainer/: devcontainer.json
jira_mcp_server/: jira_client.py  server.py
logs/: sm_assistant_audit.jsonl
scripts/: test_plan_apply.py
src/: app.py  main.py  orchestrator.py  pre_main.
src/agents/: base_agent.py  product_owner.py  product_owner_agent.py  roles.py  scrum_master.py  scrum_master_agent.py  team_member_agent.py
src/config/: mcp_client_config.py  settings.py
src/conversations/: messages.py
src/data/: project_context.json
src/interfaces/: cli.py
src/llm/: github_models_client.py
src/mcp/: client.py  tools_jira.py  vscode_bridge_server.py
src/orchestration/: context_builder.py  session_manager.py  turn_taking.py
